[package]
name = "flowd-rs"
version = "0.3.0-git"
authors = ["Ernst Rohlicek <ernst@rohlicek.at>"]
repository = "https://github.com/ERnsTL/flowd"
license = "LGPL-3.0-or-later"
description = "inter-language runtime for Flow-based Programming (FBP)"
edition = "2021"

[[bin]]
name = "flowd-rs"

[workspace]
members = [".", "component_api", "components/*"]

[dependencies]
#NOTE: the features remove logging level output more detailed than certain level, at compile-time (!)
#TODO if component crates do not declare the features, do they still get compiled with those features to save logging level checks?
log = {version = "0.4", features = ["max_level_debug", "release_max_level_info"] }

# logging facade
simplelog = "^0.12.0"

# Websocket for management API
tungstenite = "0.20"

# serialization and deserialization of JSON FBP protocol messages
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

serde_with = { version = "2.0.0", features = ["macros"] }

chrono = "0.4.26"

# for message/IP transfer
rtrb = "0.2"
#dashmap = { version = "5.3.4", features = ["serde"] }
multimap = "0.10.0"

flowd_component_api = { path = "component_api" }

# components
flowd-repeat = { path = "components/repeat" }
flowd-drop = { path = "components/drop" }
flowd-output = { path = "components/output" }
flowd-libcomponent = { path = "components/libcomponent" }
flowd-unixsocket = { path = "components/unixsocket" }
flowd-file = { path = "components/file" }
flowd-trim = { path = "components/trim" }
flowd-splitlines = { path = "components/splitlines" }
flowd-count = { path = "components/count" }
flowd-cron = { path = "components/cron" }
flowd-cmd = { path = "components/cmd" }
flowd-hasher = { path = "components/hasher" }
flowd-equals = { path = "components/equals" }
flowd-http = { path = "components/http" }
flowd-muxer = { path = "components/muxer" }
flowd-mqtt = { path = "components/mqtt" }
flowd-redis = { path = "components/redis" }
flowd-imap = { path = "components/imap" }
flowd-openai = { path = "components/openai" }
flowd-template = { path = "components/template" }
flowd-regexp = { path = "components/regexp" }
flowd-text = { path = "components/text" }
flowd-zeroconf = { path = "components/zeroconf" }

# for XzCompressComponent, XzDecompressComponent
xz = "0.1"

# for BrotliCompressComponent, BrotliDecompressComponent
brotli = "3.5"

# for TLSClientComponent
rustls = "0.23.4"
webpki-roots = "0.26"

# for TLSServerComponent
rustls-pemfile = "2"

# for JSONQueryComponent
jaq-interpret = "1.2.1"
jaq-parse = "1.0.2"
jaq-core = "1.2.1"
jaq-std = "1.2.1"

# for HTMLQueryComponent
skyscraper = "0.6.3"

# for SSHClientComponent
shell-words = "1.1.0"
lexopt = "0.3.0"

ssh-rs = "0.5.0"

# for TelegramBotComponent
# list of features:  https://github.com/teloxide/teloxide/blob/master/crates/teloxide/Cargo.toml
# specifically, no Ctrl+C handler
teloxide = { version = "0.12.2", default-features = false, features = ["native-tls"] }  # or rustls

# for MatrixClientComponent
#tokio 1.x
matrix-sdk = { version = "0.7.1", default-features = false, features = ["e2e-encryption", "native-tls"] }   # or rustls

# for Sexp
assoc = "0.1.3"

# for build.rs
[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
