[package]
name = "flowd-rs"
version = "0.3.0-git"
authors = ["Ernst Rohlicek <ernst@rohlicek.at>"]
repository = "https://github.com/ERnsTL/flowd"
license = "LGPL-3.0-or-later"
description = "inter-language runtime for Flow-based Programming (FBP)"
edition = "2021"

[[bin]]
name = "flowd-rs"

[workspace]
members = [".", "component_api", "components/*"]

[dependencies]
#NOTE: the features remove logging level output more detailed than certain level, at compile-time (!)
#TODO if component crates do not declare the features, do they still get compiled with those features to save logging level checks?
log = {version = "0.4", features = ["max_level_debug", "release_max_level_info"] }

# logging facade
simplelog = "^0.12.0"

# Websocket for management API
tungstenite = "0.20"

# serialization and deserialization of JSON FBP protocol messages
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

serde_with = { version = "2.0.0", features = ["macros"] }

chrono = "0.4.26"

# for message/IP transfer
rtrb = "0.2"
#dashmap = { version = "5.3.4", features = ["serde"] }
multimap = "0.10.0"

flowd_component_api = { path = "component_api" }

# components
flowd-repeat = { path = "components/repeat" }
flowd-drop = { path = "components/drop" }
flowd-output = { path = "components/output" }
flowd-libcomponent = { path = "components/libcomponent" }
flowd-unixsocket = { path = "components/unixsocket" }
flowd-file = { path = "components/file" }
flowd-trim = { path = "components/trim" }
flowd-splitlines = { path = "components/splitlines" }
flowd-count = { path = "components/count" }
flowd-cron = { path = "components/cron" }
flowd-cmd = { path = "components/cmd" }
flowd-hasher = { path = "components/hasher" }
flowd-equals = { path = "components/equals" }
flowd-http = { path = "components/http" }
flowd-muxer = { path = "components/muxer" }
flowd-mqtt = { path = "components/mqtt" }
flowd-redis = { path = "components/redis" }
flowd-imap = { path = "components/imap" }
flowd-openai = { path = "components/openai" }
flowd-template = { path = "components/template" }
flowd-regexp = { path = "components/regexp" }
flowd-text = { path = "components/text" }
flowd-zeroconf = { path = "components/zeroconf" }
flowd-xz = { path = "components/xz" }
flowd-brotli = { path = "components/brotli" }
flowd-html = { path = "components/html" }
flowd-ws = { path = "components/ws" }
flowd-tcp = { path = "components/tcp" }
flowd-tls = { path = "components/tls" }
flowd-json = { path = "components/json" }
flowd-ssh = { path = "components/ssh" }
flowd-telegram = { path = "components/telegram" }
flowd-matrix = { path = "components/matrix" }
flowd-sexp = { path = "components/sexp" }

# for build.rs
[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
