[package]
name = "flowd-rs"
version = "0.0.1"
authors = ["Ernst Rohlicek <ernst@rohlicek.at>"]
repository = "https://github.com/ERnsTL/flowd"
license = "GNU/LGPL-3.0+"
description = "inter-language runtime for Flow-based Programming (FBP)"
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"

tungstenite = "0.17.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "flowd-rs"
