[package]
name = "flowd-rs"
version = "0.3.0"
authors = ["Ernst Rohlicek <ernst@rohlicek.at>"]
repository = "https://github.com/ERnsTL/flowd"
license = "GNU/LGPL-3.0+"
description = "inter-language runtime for Flow-based Programming (FBP)"
edition = "2018"

[dependencies]
log = "0.4"
simplelog = "^0.12.0"

tungstenite = "0.17.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

serde_with = { version = "2.0.0", features = ["macros"] }

#dashmap = { version = "5.3.4", features = ["serde"] }

chrono = "0.4"

rtrb = "0.2"

libloading = "0.7"

[[bin]]
name = "flowd-rs"
