[package]
name = "flowd-email"
version = "0.1.0+0.4"
edition = "2021"

[lib]
path = "src/email.rs"

[dependencies]
flowd_component_api = { path = "../../component_api" }
log = "0.4"
mailparse = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.flowd]
compatible = "0.5"