[package]
name = "flowd-http"
version = "0.1.0+0.4"
edition = "2021"

[lib]
path = "src/http.rs"

[dependencies]
flowd_component_api = { path = "../../component_api" }
log = "0.4"

# for HTTPClientComponent
reqwest = { version = "0.11.24", features = [ "blocking" ] }

# for HTTPServerComponent
hyper = { version = "0.14.32", features = ["server", "http1", "tcp"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync"] }
time = { version = "0.3", features = ["formatting", "parsing"] }

[package.metadata.flowd]
compatible = "0.5"
