[package]
name = "flowd-openai"
version = "0.1.0+0.4"
edition = "2021"

[lib]
path = "src/openai.rs"

[dependencies]
flowd_component_api = { path = "../../component_api" }
log = "0.4"

# for OpenAIChatComponent
openai = "1.1.1"
tokio = "1.36.0"    #TODO optimize - old version, and use common tokio thread pool with components that also use tokio
