[package]
name = "flowd-redis"
version = "0.1.0+0.4"
edition = "2021"

[lib]
path = "src/redis.rs"

[dependencies]
flowd_component_api = { path = "../../component_api" }
log = "0.4"

# for RedisPublisherComponent and RedisSubscriberComponent
# TODO optimize - try ahash feature for 7-10% performance improvement
redis = { version = "*", default-features = false }
