[package]
name = "flowd-redis"
version = "0.1.0+0.4"
edition = "2021"

[lib]
path = "src/redis.rs"

[dependencies]
flowd_component_api = { path = "../../component_api" }
log = "0.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }

# for RedisPublisherComponent and RedisSubscriberComponent
redis-async = "0.18"
url = "2"

[package.metadata.flowd]
compatible = "0.5"
