[package]
name = "flowd-tcp"
version = "0.1.0+0.4"
edition = "2021"

[lib]
path = "src/tcp.rs"

[dependencies]
flowd_component_api = { path = "../../component_api" }
log = "0.4"

# for TCPClientComponent, TCPServerComponent
url = "2"

# for non-blocking I/O
mio = { version = "0.8", features = ["net", "os-poll"] }

[package.metadata.flowd]
compatible = "0.5"
