[package]
name = "flowd-unixsocket"
version = "0.1.0+0.4"
edition = "2021"

[lib]
path = "src/unixsocket.rs"

[dependencies]
flowd_component_api = { path = "../../component_api" }
log = "0.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time"] }

# for UnixSocketClientComponent
url = "2"
uds = "0.4.2"

# for non-blocking I/O
mio = { version = "0.8", features = ["net", "os-poll"] }

[package.metadata.flowd]
compatible = "0.5"
