[package]
name = "flowd-zeroconf"
version = "0.1.0+0.4"
edition = "2021"

[lib]
path = "src/zeroconf.rs"

[dependencies]
flowd_component_api = { path = "../../component_api" }
log = "0.4"

# for ZeroconfResponderComponent and ZeroconfQueryComponent
#simple-mdns = { version = "0.6.1", default-features = false, features = ["sync"] }
# NOTE: simple-mdns has dependency on a different version than the latest version on crates.io, for example ResourceRecord has different generic arguments
# need to use the same version as simple-mdns depends on
#simple-dns = "0.6.2"
mdns-sd = "0.10.4"
